third_party/move/move-compiler-v2/tests/more-v1/parser/match_neg_bool.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/match_neg_bool.move:4:13
  │
4 │             -true => true,
  │             ^
  │             │
  │             Unexpected '-'
  │             Expected a variable or struct or variant name
