third_party/move/move-compiler-v2/tests/more-v1/parser/match_neg_bool.move
module 0xc0ffee::m {
    fun neg_bool(x: bool): bool {
        match (x) {
            -true => true,
            _ => false,
        }
    }
}
